@@ -16585,6 +16585,14 @@ void menu_hardware_settings(MENU_ITEM_PARAMETERS)
 			menu_add_item_menu_shortcut(array_menu_hardware_settings,'u');
 		}
 
+		if (MACHINE_IS_ZXUNO) {
+			menu_add_item_menu_format(array_menu_hardware_settings,MENU_OPCION_NORMAL,menu_zxuno_uartbridge,NULL,"UART bridge emulation");
+			menu_add_item_menu_tooltip(array_menu_hardware_settings,"Bridge from zxuno uart ports to a local serial uart device");
+			menu_add_item_menu_ayuda(array_menu_hardware_settings,"Bridge from zxuno uart ports to a local serial uart device\n"
+					"It does NOT emulate a full uart device, just links from the zxuno ports to a physical local device"
+				);
+		}		
+
 
 		menu_add_item_menu_format(array_menu_hardware_settings,MENU_OPCION_NORMAL,menu_hardware_memory_settings,NULL,"~~Memory Settings");
 		menu_add_item_menu_shortcut(array_menu_hardware_settings,'m');
