@@ -75,6 +75,7 @@ extern void menu_direct_alsa_midi_output(MENU_ITEM_PARAMETERS);
 extern void menu_ay_mixer(MENU_ITEM_PARAMETERS);
 extern void menu_direct_coreaudio_midi_output(MENU_ITEM_PARAMETERS);
 extern void menu_direct_windows_midi_output(MENU_ITEM_PARAMETERS);
+extern void menu_zxuno_uartbridge(MENU_ITEM_PARAMETERS);
 
 #endif
 
