@@ -20,6 +20,7 @@ Added Real time playback from AY Chip sound to external MIDI device
 Added menu to export AY chip music to midi (.mid) file
 Added AY Sheet: showing a sheet with the notes being played
 Added AY mixer menu
+Added ZXUno UART Bridge emulation
 
 Added DAAD, PAWS and Quill debugger, for Spectrum and CPC (CPC only supports Daad debugger)
 Added text adventure keyboard also on CPC
